--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -28,10 +28,10 @@ jobs:
         pip install build
     - name: Build package
       working-directory: ./cli
-      run: python -m build
+      run: python setup.py sdist bdist_wheel
     - name: Publish package
       uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
       with:
         user: __token__
         password: ${{ secrets.PYPI_API_TOKEN }}
-        working-directory: ./cli
+        packager_dir: ./cli
