--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,9 +16,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-
+    - name: Set env
+      run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
     - name: Test environment
-      env:
-        VERSION: ${GITHUB_REF/refs\/tags\//}
       run: |
-        echo VERSION::${GITHUB_REF/refs\/tags\//}
+        echo $RELEASE_VERSION
