--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -8,7 +8,10 @@
 
 name: Upload Python Package
 
-on: workflow_dispatch
+on: 
+  push:
+    tags:
+      - '*.*.*'
 
 jobs:
   deploy:
@@ -21,6 +24,8 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.x'
+    - name: Set environment VERSION
+      run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
     - name: Install dependencies
       working-directory: ./cli
       run: |
