--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -26,6 +26,8 @@ jobs:
         python-version: '3.x'
     - name: Set environment VERSION
       run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+    - name: Set environment VERSION
+      run: cp README.md cli/
     - name: Install dependencies
       working-directory: ./cli
       run: |
