ADD: README on gitignore

--- a/cli/.gitignore
+++ b/cli/.gitignore
@@ -311,3 +311,4 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/python,pycharm+all,macos,windows,visualstudiocode
 
 test
+README.md
