--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -23,7 +23,7 @@ jobs:
       working-directory: ./cli
       run: |
         #pylint `ls -R|grep .py$|xargs`
-        find . -name "*.py"
-    - name: Unit test
-      working-directory: ./cli
-      run: python -m unittest discovery tests/
+        pylint `find . -name "*.py"`
+    #- name: Unit test
+    #  working-directory: ./cli
+    #  run: python -m unittest discovery tests/
