--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -26,5 +26,4 @@ jobs:
         #pylint `ls -R|grep .py$|xargs`
         pylint `find . -name "*.py"`
     - name: Unit test
-      working-directory: ./cli
-      run: python -m unittest discovery tests/
+      run: python -m unittest discovery ./cli/tests/
