--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -27,4 +27,4 @@ jobs:
         pylint `find . -name "*.py"`
     - name: Unit test
       working-directory: ./cli
-      run: python -m unittest tests/
+      run: python -m unittest tests/test_*.py
