--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,24 +1,34 @@
-name: CodeCov
-on: [workflow_dispatch]
+name: Example workflow for Codecov
+on: [push]
 jobs:
   run:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
     env:
-      OS: ubuntu-latest
-      PYTHON: '3.9'
+      OS: ${{ matrix.os }}
+      PYTHON: '3.7'
     steps:
-    - uses: checkout@v2
-      with:
-        fetch-depth: ‘2’
-
+    - uses: actions/checkout@master
     - name: Setup Python
       uses: actions/setup-python@master
       with:
         python-version: 3.7
-    - name: Generate Report
+    - name: Generate coverage report
       working-directory: ./cli
       run: |
-        pip install coverage
-        coverage run -m unittest
-    - name: Upload Coverage to Codecov
-      uses: codecov/codecov-action@v1
+        pip install pytest
+        pip install pytest-cov
+        pytest --cov=./ --cov-report=xml
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v2
+      with:
+        directory: ./cli/coverage/reports/
+        env_vars: OS,PYTHON
+        fail_ci_if_error: true
+        files: ./coverage1.xml,./coverage2.xml
+        flags: unittests
+        name: codecov-umbrella
+        path_to_write_report: ./cli/coverage/codecov_report.txt
+        verbose: true
