--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -39,5 +39,5 @@ jobs:
       uses: codacy/codacy-coverage-reporter-action@v1.1.0
       with:
         api-token: 87b698c9072f41ff8d9e92a4174cd737
-        coverage-reports: ./cli/coverage.xml
+        coverage-reports: cli/coverage.xml
       
