--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -35,9 +35,6 @@ jobs:
       run: |
         coverage run -m unittest tests/*.py
         coverage xml
-    - name: Codacy Coverage Reporter
-      uses: codacy/codacy-coverage-reporter-action@v1.1.0
-      with:
-        api-token: 87b698c9072f41ff8d9e92a4174cd737
-        coverage-reports: cli/coverage.xml
+    - name: Show files
+      run: ls -l
       
