--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -37,4 +37,15 @@ jobs:
         coverage xml
     - name: Show files
       run: ls -l cli
+    - name: Codacy Coverage Reporter
+      # You may pin to the exact commit or the version.
+      # uses: codacy/codacy-coverage-reporter-action@31721d7c5d2357955879f3ecbae83bf199c16000
+      uses: codacy/codacy-coverage-reporter-action@v1.1.0
+      with:
+        # API project token to retrieve your remote Codacy configuration for the project being analyzed
+        project-token: 87b698c9072f41ff8d9e92a4174cd737
+        # API account token to retrieve your remote Codacy configuration for the project being analyzed
+        api-token: 87b698c9072f41ff8d9e92a4174cd737
+        # Optional comma separated list of coverage reports to send to Codacy
+        coverage-reports: coverage.xml
       
