--- a/playbooks/mysql-8-single-node/playbook_server.yaml
+++ b/playbooks/mysql-8-single-node/playbook_server.yaml
@@ -38,32 +38,32 @@
         - ::1
     - name: Reload privilege tables
       command: |
-        mysql -p{{ mysql_root_password }} -ne "{{ item }}"
+        mysql -p{{ mysql_password }} -ne "{{ item }}"
       with_items:
         - FLUSH PRIVILEGES
       changed_when: False
     - name: Remove anonymous users
       command: |
-        mysql -p{{ mysql_root_password }} -ne "{{ item }}"
+        mysql -p{{ mysql_password }} -ne "{{ item }}"
       with_items:
         - DELETE FROM mysql.user WHERE User=''
       changed_when: False
     - name: Disallow root login remotely
       command: |
-        mysql -p{{ mysql_root_password }} -ne "{{ item }}"
+        mysql -p{{ mysql_password }} -ne "{{ item }}"
       with_items:
         - DELETE FROM mysql.user WHERE User='root' AND Host NOT IN ('localhost', '127.0.0.1', '::1')
       changed_when: False
     - name: Remove test database and access to it
       command: |
-        mysql -p{{ mysql_root_password }} -ne "{{ item }}"
+        mysql -p{{ mysql_password }} -ne "{{ item }}"
       with_items:
         - DROP DATABASE IF EXISTS test
         - DELETE FROM mysql.db WHERE Db='test' OR Db='test\\_%'
       changed_when: False
     - name: Reload privilege tables
       command: |
-        mysql -p{{ mysql_root_password }} -ne "{{ item }}"
+        mysql -p{{ mysql_password }} -ne "{{ item }}"
       with_items:
         - FLUSH PRIVILEGES
       changed_when: False
